--- a/sim-3/src/Home.css
+++ b/sim-3/src/Home.css
@@ -24,10 +24,12 @@ body {
     padding: 20px;
 }
 
-.helo-text {
+.login-box div {
     font-size: 100px;
     color: #ffffff;
     padding: 30px 0;
+    box-sizing: content-box;
+    text-shadow: 6px 6px 0px rgba(0,0,0,0.07);
 }
 
 .login-box button {
