--- a/sim-3/src/Dashboard.css
+++ b/sim-3/src/Dashboard.css
@@ -25,3 +25,59 @@
     padding-left: 10px;
 }
 
+.content-div1 {
+    border-radius: 2px;
+    background-color: #ffffff;
+    box-shadow: 0 1px 3px 0
+    rgba(0, 0, 0, 0.1), 0 1px 2px 0
+    rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: row;
+    max-width: 320;
+    padding: 10px 30px 0;
+    min-height: 150px;
+    max-height: 150px;
+    margin-right: 20px;
+}
+
+.content-div2 {
+    border-radius: 2px;
+    background-color: #ffffff;
+    box-shadow: 0 1px 3px 0
+    rgba(0, 0, 0, 0.1), 0 1px 2px 0
+    rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: row;
+    max-width: 500;
+    padding: 10px 30px 0;
+    min-height: 150px;
+    max-height: 150px;
+}
+
+.top-boxes {
+    display: flex;
+    margin: 30px 50px;
+    padding: 20px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.bottom-box {
+    margin: 0 70px;
+    padding: 20px;
+    border-radius: 2px;
+    background-color: #ffffff;
+    box-shadow: 0 1px 3px 0
+    rgba(0, 0, 0, 0.1), 0 1px 2px 0
+    rgba(0, 0, 0, 0.2);
+}
+
+.helo-text1 {
+    font-size: 20px;
+}
+
+
+.image {
+    width: 120px;
+    border: 3px solid #000000;
+}
